Temporary Bug Fix [FIX]
The Background image for the domain lists is not showing when the pages are deployed. Hence as a fallback for the time being i have added a background color.

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -108,6 +108,7 @@
     color: #4C15CB;
     border: 5px solid #4C15CB;
     border-radius: 34px;
+    background-color: #80cec8;
 }
 .dom1{
     background-image: url("/assets/bg-marble.png");
